# t212-to-digrin

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  \  pyproject.toml
.github/workflows/: deploy-tf.yml  deploy.yml  test.yml  update-lambda.yml
scripts/: build.sh
src/: aws.py  logging_config.py
t212-to-digrin/: logging_config.py  main.py  t212.py  utils.py
t212_to_digrin/: __main__.py  aws.py  lambda_entry.py  lambda_function.py  logging_config.py  main.py  t212.py  utils.py
t212_to_digrin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/: backend.tf  iam-policices.tf  iam-role-gh-deploy-tf.tf  iam-role-gh-update-lambda.tf  iam-role-lambda.tf  iam-role-scheduler.tf  iam-user-cli.tf  lambda.tf  locals.tf  s3.tf  scheduler.tf  secrets-manager.tf
tests/: test_main.py  test_utils.py
tests/fixtures/: digrin.csv  export.json  secret.json  t212.csv
tests/unit/: test.py
